[package]
name = "zencachr"
version = "1.0.0"
authors = ["abrown <andrew.brown.unl@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# evmap is a map data structures with handy properties
# - lock free
# - eventually consistent
# - concurrent and safe
evmap = "10.0.2"

# this could be useful to see if we are running low on memory
# TODO enable this dependency when you get as far as handling such concerns
# sysinfo = "0.15.3"

# The top choices for a server (as far as I am finding) is iron and warp.
# Both build upon warp which builds upon tokio. Warp has more recent updates,
# but Iron has a bigger team behind it. Both seem nice. I'm choosing Iron for
# now because it emphasizes concurrency and extensibility, so we shouldn't
# be accidentally locking ourselves into a pattern we can't get out of.
iron = "0.6.1"
router = "0.6.0"